--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>UMS Helper</title>
-  </head>
-  <body>
-    <h1>UMS Helper</h1>
-    <button id="run">Run Script</button>
-    <script src="popup.js"></script>
-  </body>
+<head>
+  <title>UMS Auto Selector</title>
+  <style>
+    body { font-family: sans-serif; padding: 10px; }
+    input, button { width: 100%; margin-top: 5px; }
+  </style>
+</head>
+<body>
+  <h3>Enter Section Codes</h3>
+  <textarea id="sections" rows="4" placeholder="e.g. ENG105.22,CSE101.1"></textarea>
+  <button id="run">Run Script</button>
+
+  <script src="popup.js"></script>
+</body>
 </html>
