--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,71 @@
 <head>
   <title>UMS Auto Selector</title>
   <style>
-    body { font-family: sans-serif; padding: 10px; }
-    input, button { width: 100%; margin-top: 5px; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 20px;
+      background: #f9fafb;
+      width: 300px;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+
+    .course-input {
+      display: flex;
+      margin-bottom: 8px;
+    }
+
+    .course-input input {
+      flex: 1;
+      padding: 6px 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .add-btn, .run-btn {
+      width: 100%;
+      padding: 8px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 4px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .add-btn {
+      background-color: #3b82f6;
+      color: white;
+    }
+
+    .run-btn {
+      background-color: #10b981;
+      color: white;
+    }
+
+    .add-btn:hover {
+      background-color: #2563eb;
+    }
+
+    .run-btn:hover {
+      background-color: #059669;
+    }
   </style>
 </head>
 <body>
-  <h3>Enter Section Codes</h3>
-  <textarea id="sections" rows="4" placeholder="e.g. ENG105.22,CSE101.1"></textarea>
-  <button id="run">Run Script</button>
+  <h1>UMS Auto Selector</h1>
+
+  <div id="courses-container">
+    <div class="course-input">
+      <input type="text" placeholder="Enter course code">
+    </div>
+  </div>
+
+  <button class="add-btn" id="add-course">+ Add Course</button>
+  <button class="run-btn" id="run">Run Script</button>
 
   <script src="popup.js"></script>
 </body>
